# jumanppy

./: .flake8  .gitignore  CMakeLists.txt  README.md  build.py  pyproject.toml
.github/: publish.sh
.github/workflows/: publish.yml
jumanppy/: CMakeLists.txt  __init__.py  main.cc  main.h
src/: CMakeLists.txt  __init__.py  main.cc  main.h
