[tool.poetry]
name = "jumanppy"
version = "1.0.0"
description = "A python packaging of jumanpp"
authors = ["Ravaka Razafimanantsoa <ravaka.razafimanantsoa@porters.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
black = "^23.1.0"
coverage = "^7.2.1"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
