[tool.poetry]
name = "jumanppy"
version = "1.0.0"
description = "A python packaging of jumanpp"
authors = ["Ravaka Razafimanantsoa <ravaka.razafimanantsoa@porters.jp>"]
license = "MIT"
readme = "README.md"
include = [
    { path = "jumanpp/**", format = "sdist" },
    { path = "jumanppy/jumandic.jppmdl" },
    { path = "jumanppy/libjumanppy.dylib", format = "wheel" },
]

[tool.poetry.build] 
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
black = "^23.1.0"
coverage = "^7.2.1"
parameterized = "^0.8.1"

[tool.poetry.group.build.dependencies]
cmake = "^3.25.2"
setuptools = "^67.6.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.5.2", "cmake", "setuptools", "requests"]
build-backend = "poetry.core.masonry.api"
